--- a/la.html
+++ b/la.html
@@ -9,33 +9,28 @@
 <body>
 
 <div class="main-menu">
-    <div class="main-menu_top">
-        <div class="logo"> 
-            <img class="big_logo" src="linklogo.png">
-        <div class="headline"> <h1>Jack</h1> </div>
-        <div class="small_headline"> Web Developer </div>
+    <div class="main-menu-top">
+        <div class="main-menu-top__logo"> 
+            <img class="main-menu__logo-big" src="linklogo.png">
+        <div class="main-menu__headline"> <h1>Jack</h1> </div>
+        <div class="main-menu__headline-small"> Web Developer </div>
 
         </div>
-
     </div>
       <div class="vertical-menu">
-        <a href="#" class="About">About</a>
-        <a href="#" class="My_Skills">My Skills</a>
-        <a href="#" class="Work">Work</a>
-        <a href="#" class="Contact">Contact</a>
-        <a href="#" class="Blog">Blog</a>
+        <a href="#" class="main-menu__about">About</a>
+        <a href="#" class="main-menu__my-skills">My Skills</a>
+        <a href="#" class="main-menu__work">Work</a>
+        <a href="#" class="main-menu__contact">Contact</a>
+        <a href="#" class="main-menu__blog">Blog</a>
       </div>
-
-      <div class="social_media">
-        <a href="https://www.linkedin.com/in/dmitrypm/"> <img class="linkedin" src="linklogo.png"></a>
-        <a href="https://github.com/DmitriiTsy"> <img class="git" src="Octocat.png"> </a>
+      <div class="media">
+        <a href="https://www.linkedin.com/in/dmitrypm/"> <img class="main-menu__linkedin" src="linklogo.png"></a>
+        <a href="https://github.com/DmitriiTsy"> <img class="main-menu__git" src="Octocat.png"> </a>
 
       </div>
-
 
 </div>
-
-
 </div>
 </body>
 </html>
