Fixed bugs and finished the first page

--- a/la.html
+++ b/la.html
@@ -9,29 +9,135 @@
 <body>
 
 <div class="main-menu">
-    <div class="main-menu-top">
-        <div class="main-menu-top__logo"> 
+    <div class="main-menu-top__logo"> 
             <img class="main-menu__logo-big" src="linklogo.png">
         <div class="main-menu__headline"> <h1>Jack</h1> </div>
         <div class="main-menu__headline-small"> Web Developer </div>
-
-        </div>
     </div>
-      <div class="vertical-menu">
+    <div class="vertical-menu">
         <a href="#" class="main-menu__about">About</a>
         <a href="#" class="main-menu__my-skills">My Skills</a>
         <a href="#" class="main-menu__work">Work</a>
         <a href="#" class="main-menu__contact">Contact</a>
         <a href="#" class="main-menu__blog">Blog</a>
-      </div>
-      <div class="media">
+    </div> 
+    <div class="media">
         <a href="https://www.linkedin.com/in/dmitrypm/"> <img class="main-menu__linkedin" src="linklogo.png"></a>
         <a href="https://github.com/DmitriiTsy"> <img class="main-menu__git" src="Octocat.png"> </a>
 
-      </div>
+    </div>
+</div>
+</div>
+
+<div class="first-page">
+  <div class="first-page__header">
+    <span>H</span>
+    <span>i</span>
+    <span>,</span>
+    <br>
+    <span>I'</span>
+    <span>m</span>
+    <span class="first-page__J">J</span>
+    <span>a</span>
+    <span>c</span>
+    <span>k</span>
+    <span>,</span>
+    <br>
+    <span>w</span>
+    <span>e</span>
+    <span>b</span>
+    <span>d</span>
+    <span>e</span>
+    <span>v</span>
+    <span>e</span>
+    <span>l</span>
+    <span>o</span>
+    <span>p</span>
+    <span>e</span>
+    <span>r</span>
+  </div>
+  
+  
+  <div class="first-page__text">Front End Developer / WordPress Expert</div>
+  </div>
+</div>
+  
+  <div class="buttons">
+    <a href="https://www.linkedin.com/in/dmitrypm/" class="first-page__button">Contact me</a>
+  </div>
+
+  <div class="run_text">
+    <a class ="first-page__run_text">scroll down</a>
+    <a class ="first-page__run_text1">scroll down</a>
+  </div>
+</div>
+
+<div class="second-page">
+  <div class="second-page-box" >
+    <div class="second-page__header">
+      <span>M</span>
+      <span>y</span>
+      <span>P</span>
+      <span>o</span>
+      <span>r</span>
+      <span>t</span>
+      <span>f</span>
+      <span>o</span>
+      <span>l</span>
+      <span>i</span>
+      <span>o</span>
+         </div>
+   
+    <div class="second-page__text"> A small gallery of recent projects chosen by me. 
+      I've done them all together with amazing people from companies <br> around the globe. It's
+      only a drop in the ocean compared to the entire list.<br>
+      Interested to see some more? Visit my work page. 
+      <a href="https://www.linkedin.com/in/dmitrypm/" class="second-page__button">See more!</a>
+
+    </div>
+    </div>
+</div>
+<div class="third-page">
+  <div class="third-page-box">
+    <div class="third-page__pic1"> </div>
+    <div class="third-page__pic2"> </div>
+    <div class="third-page__pic3"> </div>
+    <div class="third-page__pic4"> </div>
+    <div class="third-page__pic5"> </div>
+    <div class="third-page__pic6"> </div>
+    <div class="third-page__pic7"> </div>
+    <div class="third-page__pic8"> </div>
+    <div class="third-page__pic9"> </div>
+    <div class="third-page__pic10"> </div>
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
 
