--- a/la.html
+++ b/la.html
@@ -9,8 +9,8 @@
 <body>
 
 <div class="main-menu">
-    <div class="main-menu-top__logo"> 
-            <img class="main-menu__logo-big" src="linklogo.png">
+    <div class="main-menu-top__logo">
+      <a class="main-menu__J">J</a>
         <div class="main-menu__headline"> <h1>Jack</h1> </div>
         <div class="main-menu__headline-small"> Web Developer </div>
     </div>
@@ -31,30 +31,16 @@
 
 <div class="first-page">
   <div class="first-page__header">
-    <span>H</span>
-    <span>i</span>
+    <span>Hi</span>
     <span>,</span>
     <br>
-    <span>I'</span>
-    <span>m</span>
+    <span>I'm</span>
     <span class="first-page__J">J</span>
-    <span>a</span>
-    <span>c</span>
-    <span>k</span>
+    <span>ack</span>
     <span>,</span>
     <br>
-    <span>w</span>
-    <span>e</span>
-    <span>b</span>
-    <span>d</span>
-    <span>e</span>
-    <span>v</span>
-    <span>e</span>
-    <span>l</span>
-    <span>o</span>
-    <span>p</span>
-    <span>e</span>
-    <span>r</span>
+    <span>web</span>
+    <span>developer</span>
   </div>
   
   
@@ -67,25 +53,23 @@
   </div>
 
   <div class="run_text">
-    <a class ="first-page__run_text">scroll down</a>
-    <a class ="first-page__run_text1">scroll down</a>
+    <a class ="first-page__run_text">
+      <marquee color: #FFFFFF
+      direction="up" height="100" width="50" behavior="alternate" scrollamount="3"> scroll down </marquee>
+    </a>
+    <a class ="first-page__run_text1"> 
+      <marquee color: #FFFFFF
+      direction="up" height="100" width="50" behavior="alternate" scrollamount="3"> scroll down </marquee>
+    </a>
+    <img class="first-page__arrow" src = "arrow-down-short.svg">
   </div>
 </div>
 
 <div class="second-page">
   <div class="second-page-box" >
     <div class="second-page__header">
-      <span>M</span>
-      <span>y</span>
-      <span>P</span>
-      <span>o</span>
-      <span>r</span>
-      <span>t</span>
-      <span>f</span>
-      <span>o</span>
-      <span>l</span>
-      <span>i</span>
-      <span>o</span>
+      <span>My</span>
+      <span>Portfolio</span>
          </div>
    
     <div class="second-page__text"> A small gallery of recent projects chosen by me. 
@@ -99,42 +83,92 @@
 </div>
 <div class="third-page">
   <div class="third-page-box">
-    <div class="third-page__pic1"> </div>
-    <div class="third-page__pic2"> </div>
-    <div class="third-page__pic3"> </div>
-    <div class="third-page__pic4"> </div>
-    <div class="third-page__pic5"> </div>
-    <div class="third-page__pic6"> </div>
-    <div class="third-page__pic7"> </div>
-    <div class="third-page__pic8"> </div>
-    <div class="third-page__pic9"> </div>
-    <div class="third-page__pic10"> </div>
+    <img class="third-page__pic1" src="rain.jpeg"> </div>
+    <img class="third-page__pic2" src="forest.jpeg"> </div>
+    <img class="third-page__pic3" src="tree.jpeg"> </div>
+    <img class="third-page__pic4" src="Mountain.jpeg"> </div>
+  </div>
+</div>
+
+<div class="fourth-page">
+  <div class="fourth-page-box">
+    <div class="fourth-page__header">
+      <span>Me</span>
+      <span>,</span>
+      <span>Myself</span>
+      <span>and</span>
+    </div>
+    <div class="fourth-page__text">
+Since Adobe Flash was a complete innovation, alongside with <br> CSS 1.0 and HTML 4.01 as standarts of the current Web
+I've <br> been passionate about web. <br>
+<br>
+For over a decade I had many opportunities to work in a vast <br> spectrum
+of <a href ="google.com" class="links">web technologies </a> what let me gather a signifficant <br>
+amount of various experience. Working for companies and <br>
+individuals around the globe I met and learnt from amazing and <br>
+ambitious people. <br>
+<br> 
+I currently work remotely with a selected freelance client base <br> 
+being open for new opportunities. <br>
+    </div>
+  </div>
+</div>
+
+<a href ="google.com" class="links">web technologies </a>
+
+<div class="fifth-page">
+  <div class="fifth-page-box">
+    <div class="fifth-page__block1"> SQL & DATABASES
+    <h3>Database Queries to One <br> Table (Part 1) </h3> 
+    <p>This is an excerpt frpm the Mondial <br> database that is widely...</p>
+    </div>
+    <div class="fifth-page__block2"> COMPUTER SCIENCE
+    <h3>Algorithms and Data <br> Structures (Part 1)</h3>
+    <p>For the last 20 years, Google has been the <br> main search...</p>
+    </div>
+    <div class="fifth-page__block3"> WEB DEVELOPMENT 
+      <h3>Fundamentals of HTML5 <br> and CSS3</h3>
+      <p>Hypertext markup language (HTML) <br> structures documents such as web pages <br>
+      by...</p>
+    </div>
+    <div class="fifth-page__block4"> WEB DEVELOPMENT
+      <h3>Advanced Design <br> Techniques</h3>
+      <p>As the internet becomes more widespread, <br> the number and variety of...</p>
+    </div>
+    <div class="fifth-page__block5"> JAVASCRIPT
+      <h3>React JS Questions & <br> Answers (Part1) 2021</h3>
+      <p>What is JSX? JSX is a superset of <br> JavaScript that allows...</p>
+    </div>
+    <div class="fifth-page__block6"> JAVASCRIPT
+      <h3>Javascript Interview <br> Questions & Answers <br> (Part 1)</h3>
+      <p>What are the possible ways to create <br> objects in JavaScript? These...</p>
+    </div>
+  </div>
+</div>
+
+<div class="sixth-page">
+  <img class="sixth-page__map" src="map1.png">
+  <div class="sixth-page__header">
+    <span>Contact</span>
+    <span>me</span>
+  <div class="form__opacity">Jacek Jeznach, <br> Poland, ul.Maciejowicka <br> 11/2, 70-786 Szczecin <br> <br> <a>@</a>:jeznacki12@gmail.com </div>
+  <div class="sixth-page__text">
+    I'm interested in freelance opportunities - especially ambitious or large <br> 
+    projects. However, if you have other request or question, don't hesitate to <br>
+    use the form 
+  </div>
+  <div class="sixth-page__button"> Send message! 
+
+  </div>
+  
+
+
+
 
 
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
-
-
-
-
-
-
-
-
 
 
 
