First page completed + comments

--- a/la.html
+++ b/la.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" type="text/css" href="./vlog.css"/>
 <meta name="description" content="Our first page">
 <meta name="keywords" content="html tutorial template">
+<link rel="shortcut icon" href="favicon.png" type="image/png">
+<link rel="stylesheet" href="./vlog.css">
 </head>
 <body>
 
@@ -147,19 +149,43 @@ being open for new opportunities. <br>
 </div>
 
 <div class="sixth-page">
+  
   <img class="sixth-page__map" src="map1.png">
+  
   <div class="sixth-page__header">
     <span>Contact</span>
     <span>me</span>
   <div class="form__opacity">Jacek Jeznach, <br> Poland, ul.Maciejowicka <br> 11/2, 70-786 Szczecin <br> <br> <a>@</a>:jeznacki12@gmail.com </div>
+  
   <div class="sixth-page__text">
     I'm interested in freelance opportunities - especially ambitious or large <br> 
     projects. However, if you have other request or question, don't hesitate to <br>
     use the form 
   </div>
-  <div class="sixth-page__button"> Send message! 
+
+   <div class="sixth-page__form">
+    <div>
+    <form action ="#" method="get" enctype="multipart/form-data"> 
+    <input type="text" name="Name" value="" placeholder="Name"/>
+    <input type="text" name="Name" value="" placeholder="Email"/>
+    </div>
+
+    <div>
+      <input type="text" name="Name" value="" placeholder="Subject"/>
+    </div>
+    <div>
+      <textarea name="text" aria-valuetext="Message" placeholder="Message"></textarea>
+    </div>
+    <div class="sixth-page__button"> Send message! 
+    </div>
+  </form>
+
+
+
+
 
   </div>
+
   
 
 
@@ -169,7 +195,6 @@ being open for new opportunities. <br>
   </div>
 
 </div>
-
 
 
 </body>
