Page First, Page About, Page MySkills done

--- a/la.html
+++ b/la.html
@@ -17,8 +17,8 @@
         <div class="main-menu__headline-small"> Web Developer </div>
     </div>
     <div class="vertical-menu">
-        <a href="#" class="main-menu__about">About</a>
-        <a href="#" class="main-menu__my-skills">My Skills</a>
+        <a href="about.html" class="main-menu__about">About</a>
+        <a href="MySkills.html" class="main-menu__my-skills">My Skills</a>
         <a href="#" class="main-menu__work">Work</a>
         <a href="#" class="main-menu__contact">Contact</a>
         <a href="#" class="main-menu__blog">Blog</a>
@@ -196,6 +196,17 @@ being open for new opportunities. <br>
 
 </div>
 
+
+We have an object storing salaries of our team:
+
+let salaries = {
+  John: 100,
+  Ann: 160,
+  Pete: 130
+}
+Write the code to sum all salaries and store in the variable sum. Should be 390 in the example above.
+
+If salaries is empty, then the result must be 0. 
 
 </body>
 </html>
