header bugs fixed

--- a/MySkills.html
+++ b/MySkills.html
@@ -12,7 +12,7 @@
 
 <div class="main-menu">
     <div class="main-menu-top__logo">
-        <a class="main-menu__J">J</a>
+        <a class="main-menu__J" href="la.html">J</a>
         <div class="main-menu__headline"> <h1>Jack</h1> </div>
         <div class="main-menu__headline-small"> Web Developer </div>
     </div>
