--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     <div class="vertical-menu">
         <a href="about.html" class="main-menu__about">About</a>
         <a href="MySkills.html" class="main-menu__my-skills">My Skills</a>
-        <a href="#" class="main-menu__work">Work</a>
-        <a href="#" class="main-menu__contact">Contact</a>
+        <a href="work.html" class="main-menu__work">Work</a>
+        <a href="contacts.html" class="main-menu__contact">Contact</a>
         <a href="#" class="main-menu__blog">Blog</a>
     </div> 
     <div class="media">
