--- a/la.html
+++ b/la.html
@@ -20,7 +20,7 @@
         <a href="about.html" class="main-menu__about">About</a>
         <a href="MySkills.html" class="main-menu__my-skills">My Skills</a>
         <a href="work.html" class="main-menu__work">Work</a>
-        <a href="#" class="main-menu__contact">Contact</a>
+        <a href="contacts.html" class="main-menu__contact">Contact</a>
         <a href="#" class="main-menu__blog">Blog</a>
     </div> 
     <div class="media">
@@ -79,9 +79,11 @@
 
 <div class="third-page">
   <img class="third-page__pic1" src="rain.jpeg"> </div>
-  <img class="third-page__pic2" src="forest.jpeg"> </div>
+  <img class="third-page__pic2" src="forest.jpeg"> 
+  </div>
   <img class="third-page__pic3" src="tree.jpeg"> </div>
   <img class="third-page__pic4" src="Mountain.jpeg"> </div>
+  </div>
 </div>
 
 <div class="fourth-page">
@@ -165,7 +167,6 @@
     </form>
   </div>
 </div>
-
 </body>
 </html>
 
